Tradução para Kotlin, e personalização no print da AST e Tokens